--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,19 @@
 
   h2 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; }
+
+
+  footer{
+
+    background:#ccc;
+    
+    position:absolute;
+    
+    bottom:0;
+    
+    width:100%;
+    
+    padding-top:50px;
+    
+    height:50px;
+    
+    }
